ansible-rke2/roles/monitoring/templates/grafana-vs.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: networking
spec:
  hosts:
    - grafana.moonlightgrove.love
  gateways:
    - networking/galaxia-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 80
